cluster/apps/jellyfin/qbittorrent-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qbittorrent-oauth-auth-redirect
  namespace: jellyfin
spec:
  forwardAuth:
    address: http://qbittorrent-oauth2-proxy.jellyfin.svc.k8s.internal/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - Authorization
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qbittorrent-auth-headers
  namespace: jellyfin
spec:
  headers:
    sslRedirect: true
    stsSeconds: 315360000
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    sslHost: qbittorrent.yadunut.dev
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true
