cluster/apps/jellyfin/bazarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: penguin
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6767
          readinessProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: shared-media
              mountPath: /data/media
              subPath: media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: shared-media
          persistentVolumeClaim:
            claimName: jellyfin-media
