cluster/apps/jellyfin/copyparty-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: jellyfin
  labels:
    app: copyparty
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      nodeSelector:
        kubernetes.io/hostname: penguin
      containers:
        - name: copyparty
          image: copyparty/ac
          args:
            - "-i"
            - "::"
            - "-p"
            - "3923"
            - "-v"
            - "/media::rwmd,*"
            - "--no-robots"
            - "--idp-h-usr"
            - "X-Auth-Request-User"
            - "--xff-src"
            - "lan"
            - "-e2dsa"
          ports:
            - containerPort: 3923
              protocol: TCP
          volumeMounts:
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media
