cluster/apps/jellyfin/jellyseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyseerr
    spec:
      nodeSelector:
        kubernetes.io/hostname: penguin
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5055
          readinessProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
