cluster/apps/jellyfin/copyparty-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: jellyfin
spec:
  selector:
    app: copyparty
  ports:
    - port: 3923
      targetPort: 3923
      protocol: TCP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
