cluster/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: jellyfin
spec:
  selector:
    app: copyparty
  ports:
    - port: 3923
      targetPort: 3923
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyfin
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  selector:
    app.kubernetes.io/name: jellyseerr
  ports:
    - name: http
      port: 5055
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: jellyfin
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - name: http
      port: 7878
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: jellyfin
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: http
