cluster/apps/jellyfin/bazarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.yadunut.dev`)
      kind: Rule
      middlewares:
        - name: bazarr-oauth-auth-redirect
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: bazarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-oauth2-proxy
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.yadunut.dev`) && PathPrefix(`/oauth2/`)
      kind: Rule
      middlewares:
        - name: bazarr-auth-headers
      services:
        - name: bazarr-oauth2-proxy
          port: http
  tls:
    secretName: bazarr-tls
