cluster/apps/jellyfin/copyparty-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: copyparty
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media-upload.yadunut.dev`)
      kind: Rule
      middlewares:
        - name: copyparty-oauth-auth-redirect
      services:
        - name: copyparty
          port: 3923
  tls:
    secretName: copyparty-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: copyparty-oauth2-proxy
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media-upload.yadunut.dev`) && PathPrefix(`/oauth2/`)
      kind: Rule
      middlewares:
        - name: copyparty-auth-headers
      services:
        - name: copyparty-oauth2-proxy
          port: http
  tls:
    secretName: copyparty-tls
