cluster/apps/jellyfin/jellyseerr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyseerr.yadunut.dev`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
  tls:
    secretName: jellyseerr-tls
