cluster/apps/jellyfin/prowlarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.yadunut.dev`)
      kind: Rule
      middlewares:
        - name: prowlarr-oauth-auth-redirect
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: prowlarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-oauth2-proxy
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.yadunut.dev`) && PathPrefix(`/oauth2/`)
      kind: Rule
      middlewares:
        - name: prowlarr-auth-headers
      services:
        - name: prowlarr-oauth2-proxy
          port: http
  tls:
    secretName: prowlarr-tls
