cluster/apps/jellyfin/qbittorrent-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.yadunut.dev`)
      kind: Rule
      middlewares:
        - name: qbittorrent-oauth-auth-redirect
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: qbittorrent-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-oauth2-proxy
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.yadunut.dev`) && PathPrefix(`/oauth2/`)
      kind: Rule
      middlewares:
        - name: qbittorrent-auth-headers
      services:
        - name: qbittorrent-oauth2-proxy
          port: http
  tls:
    secretName: qbittorrent-tls
