cluster/apps/jellyfin/radarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.yadunut.dev`)
      kind: Rule
      middlewares:
        - name: radarr-oauth-auth-redirect
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-oauth2-proxy
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.yadunut.dev`) && PathPrefix(`/oauth2/`)
      kind: Rule
      middlewares:
        - name: radarr-auth-headers
      services:
        - name: radarr-oauth2-proxy
          port: http
  tls:
    secretName: radarr-tls
