cluster/apps/jellyfin/sonarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.yadunut.dev`)
      kind: Rule
      middlewares:
        - name: sonarr-oauth-auth-redirect
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-oauth2-proxy
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.yadunut.dev`) && PathPrefix(`/oauth2/`)
      kind: Rule
      middlewares:
        - name: sonarr-auth-headers
      services:
        - name: sonarr-oauth2-proxy
          port: http
  tls:
    secretName: sonarr-tls
